// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doc.approved === "rejected" 1`] = `
<div
  className="flex-none layout-row layout-wrap layout-align-center-start tile "
>
  <div
    className="flex-100 layout-row layout-wrap layout-align-center-center"
  >
    <div
      className="flex-100 layout-row layout-wrap layout-align-center-start"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_header"
      >
        <p
          className="flex-100"
        >
          Title
        </p>
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_text"
      >
        <p
          className="flex-100"
        >
          <Component
            lines={1}
          >
             
          </Component>
        </p>
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap layout-align-center-start"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_header"
      >
        <p
          className="flex-100"
        >
          Type
        </p>
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_text"
      >
        <p
          className="flex-100"
        />
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap layout-align-center-start"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_header"
      >
        <p
          className="flex-100"
        >
          Uploaded
        </p>
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_text"
      >
        <p
          className="flex-100"
        >
          19
        </p>
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap layout-align-center-start"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_header"
      >
        <p
          className="flex-100"
        >
          Status
        </p>
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_text rejected"
      >
        <p
          className="flex-100"
        >
          rejected
        </p>
      </div>
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-align-center-end"
  >
    <div
      className="upload_btn_wrapper flex-33 layout-row layout-align-center-center"
    >
      <form
        className="flex-none layout-row layout-align-center-center"
        onSubmit={[Function]}
      >
        <div
          className="flex-none"
          onClick={[Function]}
        >
          <i
            className="fa fa-pencil clip"
            style={
              Object {
                "background": "-webkit-linear-gradient(left, #333,#fafafa)",
              }
            }
          />
        </div>
        <input
          name="FOO_TYPE"
          onChange={[Function]}
          type="file"
        />
      </form>
    </div>
    <div
      className="upload_btn_wrapper flex-33 layout-row layout-align-center-center"
    >
      <div
        className="flex-none layout-row layout-align-center-center"
        onClick={[Function]}
      >
        <i
          className="clip fa fa-trash"
          style={
            Object {
              "background": "-webkit-linear-gradient(left, #333,#fafafa)",
            }
          }
        />
      </div>
    </div>
    <div
      className="upload_btn_wrapper flex-33 layout-row layout-align-center-center"
    />
  </div>
</div>
`;

exports[`doc.approved === null 1`] = `
<div
  className="flex-none layout-row layout-wrap layout-align-center-start tile "
>
  <div
    className="flex-100 layout-row layout-wrap layout-align-center-center"
  >
    <div
      className="flex-100 layout-row layout-wrap layout-align-center-start"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_header"
      >
        <p
          className="flex-100"
        >
          Title
        </p>
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_text"
      >
        <p
          className="flex-100"
        >
          <Component
            lines={1}
          >
             
          </Component>
        </p>
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap layout-align-center-start"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_header"
      >
        <p
          className="flex-100"
        >
          Type
        </p>
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_text"
      >
        <p
          className="flex-100"
        />
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap layout-align-center-start"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_header"
      >
        <p
          className="flex-100"
        >
          Uploaded
        </p>
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_text"
      >
        <p
          className="flex-100"
        >
          19
        </p>
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap layout-align-center-start"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_header"
      >
        <p
          className="flex-100"
        >
          Status
        </p>
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_text pending"
      >
        <p
          className="flex-100"
        >
          Pending
        </p>
      </div>
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-align-center-end"
  >
    <div
      className="upload_btn_wrapper flex-33 layout-row layout-align-center-center"
    >
      <form
        className="flex-none layout-row layout-align-center-center"
        onSubmit={[Function]}
      >
        <div
          className="flex-none"
          onClick={[Function]}
        >
          <i
            className="fa fa-pencil clip"
            style={
              Object {
                "background": "-webkit-linear-gradient(left, #333,#fafafa)",
              }
            }
          />
        </div>
        <input
          name="FOO_TYPE"
          onChange={[Function]}
          type="file"
        />
      </form>
    </div>
    <div
      className="upload_btn_wrapper flex-33 layout-row layout-align-center-center"
    >
      <div
        className="flex-none layout-row layout-align-center-center"
        onClick={[Function]}
      >
        <i
          className="clip fa fa-trash"
          style={
            Object {
              "background": "-webkit-linear-gradient(left, #333,#fafafa)",
            }
          }
        />
      </div>
    </div>
    <div
      className="upload_btn_wrapper flex-33 layout-row layout-align-center-center"
    />
  </div>
</div>
`;

exports[`props.isAdmin is true 1`] = `
<div
  className="flex-none layout-row layout-wrap layout-align-center-start tile "
>
  <div
    className="flex-100 layout-row layout-wrap layout-align-center-center"
  >
    <div
      className="flex-100 layout-row layout-wrap layout-align-center-start"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_header"
      >
        <p
          className="flex-100"
        >
          Title
        </p>
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_text"
      >
        <p
          className="flex-100"
        >
          <Component
            lines={1}
          >
             
          </Component>
        </p>
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap layout-align-center-start"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_header"
      >
        <p
          className="flex-100"
        >
          Type
        </p>
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_text"
      >
        <p
          className="flex-100"
        />
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap layout-align-center-start"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_header"
      >
        <p
          className="flex-100"
        >
          Uploaded
        </p>
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_text"
      >
        <p
          className="flex-100"
        >
          19
        </p>
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap layout-align-center-start"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_header"
      >
        <p
          className="flex-100"
        >
          Status
        </p>
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_text approved"
      >
        <p
          className="flex-100"
        >
          approved
        </p>
      </div>
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-align-center-end"
  >
    <div
      className="upload_btn_wrapper flex-33 layout-row layout-align-center-center"
    >
      <div
        className="flex-none layout-row layout-align-center-center"
        onClick={[Function]}
      >
        <i
          className="clip fa fa-check"
          style={
            Object {
              "background": "-webkit-linear-gradient(left, #333,#fafafa)",
            }
          }
        />
      </div>
    </div>
    <div
      className="upload_btn_wrapper flex-33 layout-row layout-align-center-center"
    >
      <div
        className="flex-none layout-row layout-align-center-center"
        onClick={[Function]}
      >
        <i
          className=" fa fa-times"
          style={
            Object {
              "color": "red",
            }
          }
        />
      </div>
    </div>
    <div
      className="upload_btn_wrapper flex-33 layout-row layout-align-center-center"
    />
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="flex-none layout-row layout-wrap layout-align-center-start tile "
>
  <div
    className="flex-100 layout-row layout-wrap layout-align-center-center"
  >
    <div
      className="flex-100 layout-row layout-wrap layout-align-center-start"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_header"
      >
        <p
          className="flex-100"
        >
          Title
        </p>
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_text"
      >
        <p
          className="flex-100"
        >
          <Component
            lines={1}
          >
             
          </Component>
        </p>
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap layout-align-center-start"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_header"
      >
        <p
          className="flex-100"
        >
          Type
        </p>
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_text"
      >
        <p
          className="flex-100"
        />
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap layout-align-center-start"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_header"
      >
        <p
          className="flex-100"
        >
          Uploaded
        </p>
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_text"
      >
        <p
          className="flex-100"
        >
          19
        </p>
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap layout-align-center-start"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_header"
      >
        <p
          className="flex-100"
        >
          Status
        </p>
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_text approved"
      >
        <p
          className="flex-100"
        >
          approved
        </p>
      </div>
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-align-center-end"
  >
    <div
      className="upload_btn_wrapper flex-33 layout-row layout-align-center-center"
    >
      <form
        className="flex-none layout-row layout-align-center-center"
        onSubmit={[Function]}
      >
        <div
          className="flex-none"
          onClick={[Function]}
        >
          <i
            className="fa fa-pencil clip"
            style={
              Object {
                "background": "-webkit-linear-gradient(left, #333,#fafafa)",
              }
            }
          />
        </div>
        <input
          name="FOO_TYPE"
          onChange={[Function]}
          type="file"
        />
      </form>
    </div>
    <div
      className="upload_btn_wrapper flex-33 layout-row layout-align-center-center"
    >
      <div
        className="flex-none layout-row layout-align-center-center"
        onClick={[Function]}
      >
        <i
          className="clip fa fa-trash"
          style={
            Object {
              "background": "-webkit-linear-gradient(left, #333,#fafafa)",
            }
          }
        />
      </div>
    </div>
    <div
      className="upload_btn_wrapper flex-33 layout-row layout-align-center-center"
    />
  </div>
</div>
`;

exports[`state.showDenialDetails is true 1`] = `
<div
  className="flex-none layout-row layout-wrap layout-align-center-start tile "
>
  <div
    className="flex-none layout-row layout-align-center-center  backdrop"
  >
    <div
      className="flex-none fade"
      onClick={[Function]}
    />
    <div
      className="flex-none layout-row layout-wrap layout-align-center-start  content"
    >
      <div
        className="flex-100 layout-row layout-align-start-center"
      >
        <h3
          className="flex-none clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(left, #333,#fafafa)",
            }
          }
        >
          Reject document
        </h3>
      </div>
      <div
        className="flex-100 layout-row layout-align-start-center input_box"
      >
        <textarea
          className="flex-100"
          onChange={[Function]}
          rows="4"
        />
      </div>
      <div
        className="flex-100 layout-row layout-align-end-end"
      >
        <div
          className="flex-none layout-row"
          style={
            Object {
              "margin": "15px",
            }
          }
        >
          <RoundButton
            handleNext={[Function]}
            iconClass="fa-times"
            size="small"
            text="Deny"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-center-center"
  >
    <div
      className="flex-100 layout-row layout-wrap layout-align-center-start"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_header"
      >
        <p
          className="flex-100"
        >
          Title
        </p>
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_text"
      >
        <p
          className="flex-100"
        >
          <Component
            lines={1}
          >
             
          </Component>
        </p>
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap layout-align-center-start"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_header"
      >
        <p
          className="flex-100"
        >
          Type
        </p>
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_text"
      >
        <p
          className="flex-100"
        />
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap layout-align-center-start"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_header"
      >
        <p
          className="flex-100"
        >
          Uploaded
        </p>
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_text"
      >
        <p
          className="flex-100"
        >
          19
        </p>
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap layout-align-center-start"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_header"
      >
        <p
          className="flex-100"
        >
          Status
        </p>
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-center-start file_text approved"
      >
        <p
          className="flex-100"
        >
          approved
        </p>
      </div>
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-align-center-end"
  >
    <div
      className="upload_btn_wrapper flex-33 layout-row layout-align-center-center"
    >
      <form
        className="flex-none layout-row layout-align-center-center"
        onSubmit={[Function]}
      >
        <div
          className="flex-none"
          onClick={[Function]}
        >
          <i
            className="fa fa-pencil clip"
            style={
              Object {
                "background": "-webkit-linear-gradient(left, #333,#fafafa)",
              }
            }
          />
        </div>
        <input
          name="FOO_TYPE"
          onChange={[Function]}
          type="file"
        />
      </form>
    </div>
    <div
      className="upload_btn_wrapper flex-33 layout-row layout-align-center-center"
    >
      <div
        className="flex-none layout-row layout-align-center-center"
        onClick={[Function]}
      >
        <i
          className="clip fa fa-trash"
          style={
            Object {
              "background": "-webkit-linear-gradient(left, #333,#fafafa)",
            }
          }
        />
      </div>
    </div>
    <div
      className="upload_btn_wrapper flex-33 layout-row layout-align-center-center"
    />
  </div>
</div>
`;
